# genovation-control-pad

./: .gitignore  LICENSE.txt  Makefile  README.md  cabal.project  genovation-control-pad.cabal  stack.yaml  watch.sh
data/: GeneratedByMacroMasterCPxx.ckd  PS2-ScanCodes.yaml  Simple.ckd
documents/: NOTES.md  PS2_Keyboard_ScanCodes.html  PS2_Keyboard_ScanCodes.org  PS2_Keyboard_ScanCodes.txt  PS2_Keyboard_ScanCodes.yaml  cabal.project.md
documents/Genovation/: ReadMe.txt
scripts/: pandoc-convert-table-from-html-to-emacs.sh
scripts/sboo/: ghcid.sh
share/emacs/: x-scancode.yasnippet
sources/: GenovationControlPad.hs  Paths_genovation_control_pad.hs  Prelude_genovation_control_pad.hs  Prelude_scan_codes.hs
sources/GenovationControlPad/: Create.hs  Encode.hs  Parse.hs  Render.hs  Semantic.hs  Syntactic.hs  Types.hs
sources/Internal/: GenovationControlPad.hs
sources/Prelude/: GenovationControlPad.hs
sources/ScanCodes/: PS2.hs  Types.hs  Values.hs
src/ScanCodes/: PS2.hs
src/ScanCodes/PS2/: Keys.hs  Types.hs  Yaml.hs
